# gamelauncher

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/: copilot-instructions.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  types.rs
src-tauri/src/commands/: auth.rs  game.rs  mod.rs  settings.rs
src-tauri/src/services/: auth_service.rs  download_manager.rs  file_manager.rs  game_service.rs  mod.rs  settings_service.rs
src/components/: LauncherScreen.tsx  LoginScreen.tsx
src/services/: authService.ts  gameService.ts  settingsService.ts  store.ts
src/styles/: index.css
src/types/: index.ts
